# data_crawler_examples

./: .gitignore  README.md  dev-requirements.txt  project_requirements.md  pyproject.toml  requirements.txt
example_data_crawler/: __init__.py  main.py  mersedes_crawler.py
example_data_crawler/crawlers/: __init__.py  lrytas.py
examples/lrytas/: all.py  by_topic.py
paulius_data_crawler/: main.py
tests/: article.html  articles.json  articles_page.html  conftest.py  test_fixtures.py  test_main.py
tests/mocks/: lrytas.json
