[tool.poetry]
name = "example_data_crawler"
version = "0.1.0"
description = "Example Data Crawler is a Python package for teaching web crawling basics at CodeAcademy. It uses Python 3.11 with lxml and requests, focusing on practical web data extraction techniques for beginners."
authors = ["Foxicution <foxicution.dev@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.3"
requests = "^2.31.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.9.0"
python-lsp-ruff = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
